src/objects/auEvent__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auEvent_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventDateFormatted__c</fullName>
        <formula>IF (ISNULL(EventDate__c), &apos;&apos;, 
IF (EventDate__c ==  TODAY(), &apos;今日&apos;, 
IF (EventDate__c ==  TODAY()+1, &apos;明日&apos;,
TEXT(DAY(EventDate__c)) + &apos;日（&apos; + CASE( MOD( EventDate__c - DATE(1900, 1, 7), 7), 0, &quot;日&quot;, 1, &quot;月&quot;, 2, &quot;火&quot;, 3, &quot;水&quot;, 4, &quot;木&quot;, 5, &quot;金&quot;, 6, &quot;土&quot;,&quot;&quot;) + &apos;）&apos; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (Formatted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTimeEnd__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventTimeStart__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <label>Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecalculateSharingVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RecalculateSharingVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STPDCount__c</fullName>
        <label>STPDシート数</label>
        <summaryForeignKey>auEventJunction__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TechnicalTimeFormatted__c</fullName>
        <description>Technical field used to format the StartTime in a readable format, in the timezone of the user.</description>
        <label>TechnicalTimeFormatted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamMeeting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OwnerMeeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>イベント</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVT-{00000000}</displayFormat>
        <label>Event No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Account1stParent__c</fullName>
        <label>運営</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Account2ndParent__c</fullName>
        <label>一次</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KDDISalesUser__c</fullName>
        <label>KDDI営業担当</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Honbu__c</fullName>
        <label>本部</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Shisha__c</fullName>
        <label>支社</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Shiten__c</fullName>
        <label>支店</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ShopSameAccount1stParent__c</fullName>
        <label>ショップ・同運営</label>
    </sharingReasons>
</CustomObject>